# cpp_projects

./: .gitlab-ci.yml  .gitmodules  .testenv-beta-ci.yml  .testenv-ci.yml  CMakeLists.txt  LECTURES.md  SCORE.md
cmake/: FindCatch.cmake
deadlines/: se.yml
tasks/admission/: admission.cpp
tasks/any/: .tester.json  any.cpp  any.h
tasks/array/: .tester.json  array.h  test.cpp
tasks/caesar_cipher/: .tester.json  caesar_cipher.cpp
tasks/chocolate/: chocolate.cpp
tasks/const_diagonal/: .tester.json  const_diagonal.cpp
tasks/copy/: .tester.json  copy.h  test.cpp
tasks/cstring/: .tester.json  cstring.cpp  test.cpp
tasks/dedup/: dedup.h  test.cpp
tasks/enumerate/: .tester.json  enumerate.h  test.cpp
tasks/factorization/: factorization.cpp  factorization.h
tasks/fibonacci/: fibonacci.cpp
tasks/find_last/: find_last.h
tasks/geometry::circle/: test.cpp
tasks/geometry::line/: .tester.json  line.h  point.h  segment.h
tasks/geometry::point/: .tester.json  i_shape.h
tasks/geometry::polygon/: .tester.json  test.cpp
tasks/geometry::ray/: .tester.json  CMakeLists.txt
tasks/geometry::segment/: CMakeLists.txt
tasks/geometry_circle/: .tester.json  circle.cpp  circle.h  i_shape.h  line.h  segment.cpp  segment.h
tasks/geometry_line/: line.h  segment.cpp  segment.h  vector.cpp
tasks/geometry_point/: point.cpp  segment.h  vector.cpp  vector.h
tasks/geometry_polygon/: line.h  point.h  polygon.cpp  polygon.h  segment.h  vector.cpp
tasks/geometry_ray/: point.cpp  ray.cpp  ray.h  segment.cpp
tasks/geometry_segment/: .tester.json  line.cpp  point.cpp  segment.cpp  vector.cpp  vector.h
tasks/geometry_vector/: .tester.json  vector.cpp
tasks/hypotenuse/: .tester.json  hypotenuse.cpp
tasks/is_leap/: is_leap.cpp
tasks/is_sorted_until/: .tester.json  is_sorted_until.h
tasks/itertools/: itertools.h  test.cpp
tasks/list/: list.h
tasks/min_divisor/: min_divisor.cpp
tasks/next_even/: next_even.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/provinces/: provinces.cpp  provinces.h  test.cpp
tasks/queue/: .tester.json  queue.cpp  test.cpp
tasks/range/: .tester.json  range.cpp  range_test.cpp
tasks/rational/: rational.cpp
tasks/reader/: .tester.json  CMakeLists.txt  reader.cpp  reader.h  readers_util.cpp  readers_util.h  test.cpp  utils.cpp
tasks/reduce_fraction/: reduce_fraction.cpp
tasks/remove/: .tester.json  remove.h  test.cpp
tasks/reversed/: .tester.json  reversed.h
tasks/rotate/: .tester.json  rotate.h  test.cpp
tasks/scorer/: scorer.cpp  test.cpp
tasks/smart-ptr/: smart_ptr.h
tasks/sort/: .tester.json  readme.md  sort.h
tasks/sort_students/: sort_students.cpp  sort_students.h
tasks/stack/: stack.cpp
tasks/string/: .tester.json  cppstring.cpp  cppstring.h
tasks/string_view/: .tester.json  string_view.cpp  string_view.h  test.cpp
tasks/sum_digits/: .tester.json  sum_digits.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unique/: .tester.json  test.cpp  unique.h
tasks/unique-ptr/: .tester.json  test.cpp  unique_ptr.h
tasks/unixpath/: test.cpp  unixpath.cpp
tasks/unordered_set/: .tester.json  unordered_set.h
tasks/variable_diagonal/: .tester.json  variable_diagonal.cpp
tasks/vector/: test.cpp  vector.h
tasks/word2vec/: word2vec.cpp
